--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,2 @@
 Data/DISCOV_Invasea_V3.csv filter=lfs diff=lfs merge=lfs -text
+Data/RGB_Invasea/Belon_Pred_RGB_V3_pred.tif filter=lfs diff=lfs merge=lfs -text
